CICO-22442 - Alignment & minor style fixes

--- a/stylesheets/less/app/07_print.less
+++ b/stylesheets/less/app/07_print.less
@@ -557,6 +557,11 @@ table {
                             .show;
                         }
 
+                        &.revenue,
+                        &.amount { width: 30%; }
+                        &.type,
+                        &.tax { width: 20%; }
+
                         &:not(:last-child) { border-right: 1px solid @grey2; }
                     }
                 }
